<resources>
    <string name="app_name">Ny Baiboliko</string>

    <string name="facebook_app_id">1817962621814062</string>

    <string name="action_settings">Settings</string>
    <string name="bible">Baiboly</string>
    <string name="ffpm">Fihirana ffpm</string>
    <string name="ff">Fihirana fanampiny</string>
    <string name="drawer_open">Sokafana</string>
    <string name="drawer_close">Akatona</string>
    <string name="message_quitte">Akatona ve?</string>
    <string name="bible_section">Baiboly</string>
    <string name="ffpm_section">Fihirana FFPM</string>
    <string name="ff_section">Fihirana fanampiny</string>
    <string name="find">Fikarohana</string>
    <string name="find_title">Fikarohana</string>
    <string name="story_title">Ireo efa novakiana</string>
    <string name="add_tab">Vakiteny hafa</string>
    <string name="auteur">by Alain Patrick Rajaonarison</string>
    <string name="option">Safidy hafa</string>
    <string name="ts">Tsanta</string>
    <string name="an">Antema</string>
    <string name="fihirana">Fihirana</string>
    <string name="ts_section">Tsanta</string>
    <string name="an_section">Antema</string>
    <string name="share">Zaraina</string>
    <string name="share_fb">Facebook</string>
    <string name="share_other">Hafa</string>
    <string name="clear">Fafana daholo</string>
</resources>
