<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_bible"
            android:icon="@mipmap/ic_bible"
            android:title="@string/bible" />
        <item
            android:id="@+id/nav_ffpm"
            android:icon="@mipmap/ic_ffpm"
            android:title="@string/ffpm" />
        <item
            android:id="@+id/nav_ff"
            android:icon="@mipmap/ic_ff"
            android:title="@string/ff" />

    </group>
    <item android:title="@string/option">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_story"
                    android:icon="@mipmap/ic_history"
                    android:title="@string/story_title" />
                <item
                    android:id="@+id/nav_find"
                    android:icon="@mipmap/ic_nav_find"
                    android:title="@string/find" />
            </group>
        </menu>
    </item>

</menu>